--- a/WeaverCharleyExerciseLayout/index.html
+++ b/WeaverCharleyExerciseLayout/index.html
@@ -301,12 +301,10 @@
               <textarea id="question" cols="20" rows="5"></textarea>
             </div>
             <div>
-              <input type="checkbox" id="marketing" required/>
+              <input type="checkbox" id="marketing"/>
               <label for="marketing">Opt into marketing communications</label>
             </div>
-            <div>
-              <button type="submit">Submit</button>
-            </div>
+              <button type="submit">Submit Question</button>
           </form>
         </section>
       </main>
