final comments and changes

--- a/WeaverCharleyExerciseLayout/index.html
+++ b/WeaverCharleyExerciseLayout/index.html
@@ -16,6 +16,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/main.css" />
+    <!--link source file-->
+    <script src="js/main.js"></script>
     <title>One Piece</title>
   </head>
   <body>
@@ -283,6 +285,7 @@
         </section>
         <section>
           <h2 id="contact">Contact Us</h2>
+          <!--add contact us form-->
           <form>
             <div>
               <label for="firstname">First Name</label>
@@ -297,10 +300,12 @@
               <input type="email" id="email" required/>
             </div>
             <div>
+              <!--text area not required-->
               <label for="question">Question</label>
               <textarea id="question" cols="20" rows="5"></textarea>
             </div>
             <div>
+              <!--checkbox is first-->
               <input type="checkbox" id="marketing"/>
               <label for="marketing">Opt into marketing communications</label>
             </div>
